--- a/Smart-Rule.yaml
+++ b/Smart-Rule.yaml
@@ -1,6 +1,10 @@
-# MengRain & Coldvvater-Config   (Stash)
+# SmartDaddy-Config   (Stash)
 # Date:2022.10.5
 # 最后一次更新于：2023.02.26
+# 找到 {远程订阅} 部分，将MyProxy 部分的 url替换为自己的机场订阅链接  
+
+subscribe-url: 你的订阅链接
+# 替换上面文字用于Stash获取机场流量信息并在主页显示
 
 #混合端口
 mixed-port: 7890
