--- a/Smart-Rule.yaml
+++ b/Smart-Rule.yaml
@@ -3,7 +3,7 @@
 # 最后一次更新于：2023.02.26
 # 找到 {远程订阅} 部分，将MyProxy 部分的 url替换为自己的机场订阅链接  
 
-subscribe-url: 你的订阅链接
+subscribe-url: https://s.suying666.info/link/8e9HzGZsC915V12x?list=shadowrocket
 # 替换上面文字用于Stash获取机场流量信息并在主页显示
 
 #混合端口
@@ -58,7 +58,7 @@ proxies:
 proxy-providers:
 
   MyProxy: &MyProxy #建立锚点
-    url: "https://sub.store/download/collection/MySub"
+    url: "https://s.suying666.info/link/8e9HzGZsC915V12x?list=shadowrocket"
     # 使用Clash类型订阅链接替换掉引号""内的链接使用。
     # 或可使用通用订阅链接通过Sub-Store进行订阅转换。
     interval: 86400
